correction bug wrap menu quand on utilise la section veille/stage

--- a/index.css
+++ b/index.css
@@ -422,12 +422,15 @@ nav img {
 /*************************************************************************************************************Veille et Stage*/
 #veille_stage {
   height: 100vh;
+  width: 100%;
   background-color: rgb(245, 245, 245);
-  display: flex;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 #veille {
+  position: absolute;
+  right: 0;
+  height: 100%;
   width: 50%;
   display: flex;
   flex-direction: column;
@@ -437,6 +440,8 @@ nav img {
   background-repeat: no-repeat;
   background-position: center;
   transition: 1s;
+  /* border: 3px solid rgb(85, 0, 255); */
+  overflow: hidden;
 }
 
 #bouton_veille {
@@ -460,6 +465,8 @@ nav img {
   width: 0;
   opacity: 0;
   overflow: hidden;
+  /* display: none; */
+
   transition: 1s;
 }
 
@@ -490,7 +497,10 @@ nav img {
 }
 
 #stage {
+  /* position: absolute;
+  left: 0; */
   width: 50%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -499,6 +509,9 @@ nav img {
   background-repeat: no-repeat;
   background-position: center;
   transition: 1s;
+  overflow: hidden;
+  /* display: none; */
+  /* border: 3px solid red; */
 }
 
 #bouton_stage {
@@ -548,10 +561,10 @@ nav img {
   opacity: 0;
   transition: 0.5s;
 }
-
+/* 
 #stage.active2 button:nth-child(1) {
   display: none;
-}
+} */
 
 /************************************************************************************************************* Footer*/
 footer {
